tests/ui-fulldeps/session-diagnostic/diagnostic-derive-compiletime.stderr
error: this is a binary expression
  --> $DIR/diagnostic-derive-compiletime.rs:4:14
   |
LL |     let _a = 1+1;
   |              ^^^
   |
   = note: `#[deny(hello::hello_lint)]` on by default

error: aborting due to 1 previous error

